manifests/groups/rollout/service.yaml
################################################
# Standardized Service
################################################
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector: {}
  ports:
    - name: app
      port: 80
      targetPort: app
      protocol: TCP
