manifests/groups/rollout/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-ingress-deny
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-ingress-allow-internal-nginx
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchExpressions:
            - key: infra/app
              operator: In
              values:
              - ingress-nginx-internal
            - key: infra/component
              operator: In
              values:
              - controller
      - namespaceSelector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values: [ingress-internal]
    ports:
    - port: app
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-ingress-allow-internet-facing-nginx
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchExpressions:
            - key: infra/app
              operator: In
              values:
              - ingress-nginx-internet-facing
            - key: infra/component
              operator: In
              values:
              - controller
      - namespaceSelector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values: [ingress-internet-facing]
    ports:
    - port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-ingress-allow-prometheus
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchExpressions:
            - key: app.kubernetes.io/name
              operator: In
              values:
              - prometheus
      - namespaceSelector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values: [monitoring]
    ports:
    - port: metrics
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allow-same-labels
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-allow-coroot
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/instance: coroot
            app.kubernetes.io/name: node-agent
